<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="?actionBarSize">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Hello..You!"
            >

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium_2">


            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:elevation="1dp"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1.0"
                    app:progressMode="false"
                    app:selectedDotColor="@color/colorAccent" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestFilmMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_popular_films"
                android:layout_below="@id/flBanner"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"/>
            <include
                android:id="@+id/viewPodMovieList"
                layout="@layout/view_pod_movie_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBestFilmMovie"
                android:layout_margin="@dimen/margin_medium_2"
                />

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rlCheckMovieShowtime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show"
                android:layout_below="@id/viewPodMovieList"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowTimesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:text="@string/lbl_check_movie_nshow_times"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:text="@string/lbl_see_more"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    app:srcCompat="@drawable/ic_baseline_location_on_24dp" />


            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_below="@id/rlCheckMovieShowtime"
                app:tabTextColor="@color/colorSecondaryText"
                app:tabSelectedTextColor="@color/white"
                android:background="@color/colorPrimary"
                app:tabIndicator="@color/colorAccent"
                app:tabMode="scrollable"
                />
            <FrameLayout
                android:id="@+id/flMovieByGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabLayoutGenre"
                android:paddingTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_large"
                android:background="@color/colorPrimaryDark">
                <include
                    android:id="@+id/vpMovieByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_pod_movie_list"
                    android:layout_margin="@dimen/margin_medium_2"
                    />

            </FrameLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flMovieByGenre"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_showcases"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreCasesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:text="@string/lbl_more_showcases"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMoreCasesLabel"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/margin_medium_2"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/view_holder_showcases" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>